--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-x
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>You Make Every Moment Magical and Filled with Love | Raneem, Be My Valentine</title>
     <style>
         body {
@@ -22,17 +22,17 @@ x
             overflow: hidden;
         }
 
-        #backgroundImage{
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        transition: opacity 1s ease-in-out;
-        opacity: 0;
-    }
+        #backgroundImage {
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            transition: opacity 1s ease-in-out;
+            opacity: 0;
+        }
 
         #alternativeBackground {
             width: 100%;
@@ -168,7 +168,27 @@ x
         /* Media query for smaller screens */
         @media (max-width: 600px) {
             #poem-container {
-                width: 90%;
+                width: 100%;
+                padding: 10px; /* Adjust padding for smaller screens */
+            }
+
+            #muteButton {
+                font-size: 1em;
+            }
+
+            #invite {
+                font-size: 1em;
+            }
+
+            #heart {
+                font-size: 1.2em;
+            }
+
+            #loveQuote,
+            #affectionMessage,
+            #generateLoveQuote,
+            #viewPoemButton {
+                font-size: 1em;
             }
         }
     </style>
