--- a/index.html
+++ b/index.html
@@ -5,193 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>You Make Every Moment Magical and Filled with Love | Raneem, Be My Valentine</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            color: #fff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            text-align: center;
-            margin: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            background: black;
-            overflow: hidden;
-        }
-
-        #backgroundImage {
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
-            transition: opacity 1s ease-in-out;
-            opacity: 0;
-        }
-
-        #alternativeBackground {
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
-            transition: opacity 1s ease-in-out;
-            opacity: 1;
-        }
-
-        #muteButton {
-            font-size: 1.2em;
-            cursor: pointer;
-            color: #ff4d4d;
-            margin-top: 20px;
-            margin-right: 20px;
-            background: none;
-            border: none;
-            outline: none;
-            transition: color 0.3s ease-in-out;
-            position: absolute;
-            top: 0;
-            right: 0;
-            display: none;
-        }
-
-        #muteButton:hover {
-            color: #ff9999;
-        }
-
-        #poem-container {
-            background-color: rgba(255, 255, 255, 0);
-            border-radius: 10px;
-            padding: 20px;
-            width: 80%;
-            max-width: 600px;
-            margin-top: 20px;
-        }
-
-        #poem {
-            color: #E55451;
-            font-size: 1.5em;
-            line-height: 1.6;
-        }
-
-        #invite {
-            color: #ff4d4d;
-            font-size: 1.2em;
-            margin-top: 20px;
-        }
-
-        #heart {
-            color: #ff4d4d;
-            cursor: pointer;
-            font-size: 1.5em;
-            animation: heartbeat 1s infinite, float 3s ease-in-out infinite;
-            transition: color 0.3s ease-in-out, transform 0.5s ease-in-out;
-        }
-
-        @keyframes heartbeat {
-            0%, 100% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.2);
-            }
-        }
-
-        @keyframes float {
-            0%, 100% {
-                transform: translateY(0);
-            }
-
-            50% {
-                transform: translateY(-10px);
-            }
-        }
-
-        #loveQuote {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #fff;
-        }
-
-        #affectionMessage {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #E55451;
-        }
-
-        #generateLoveQuote {
-            font-size: 1.2em;
-            cursor: pointer;
-            color: #fff;
-            margin-top: 20px;
-            background: none;
-            border: none;
-            outline: none;
-            transition: color 0.3s ease-in-out;
-        }
-
-        #generateLoveQuote:hover {
-            color: #eee;
-        }
-
-        #viewPoemButton {
-            font-size: 1.2em;
-            cursor: pointer;
-            color: #fff;
-            margin-top: 20px;
-            background: none;
-            border: none;
-            outline: none;
-            transition: color 0.3s ease-in-out;
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: none;
-        }
-
-        #viewPoemButton:hover {
-            color: #eee;
-        }
-
-        #floor {
-            height: 50px;
-        }
-
-        /* Media query for smaller screens */
-        @media (max-width: 600px) {
-            #poem-container {
-                width: 100%;
-                padding: 10px; /* Adjust padding for smaller screens */
-            }
-
-            #muteButton {
-                font-size: 1em;
-            }
-
-            #invite {
-                font-size: 1em;
-            }
-
-            #heart {
-                font-size: 1.2em;
-            }
-
-            #loveQuote,
-            #affectionMessage,
-            #generateLoveQuote,
-            #viewPoemButton {
-                font-size: 1em;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -236,113 +50,7 @@
 
     <div id="floor"></div>
 
-    <script>
-        var audio = document.getElementById("myAudio");
-        var backgroundImage = document.getElementById("backgroundImage");
-        var alternativeBackground = document.getElementById("alternativeBackground");
-        var muteButton = document.getElementById("muteButton");
-        var viewPoemButton = document.getElementById("viewPoemButton");
-
-        function playSong() {
-            audio.play();
-        }
-
-        function toggleMute() {
-            audio.muted = !audio.muted;
-            muteButton.textContent = audio.muted ? "🔊 Unmute" : "🔇 Mute";
-        }
-
-        function generateLoveQuote() {
-            var loveQuotes = [
-                "Your fiery locks light up my world like a blazing sun.",
-                "In the dance of love, your red hair is a flame that never dims.",
-                "Raneem, the fire in your heart ignites a passionate love in mine.",
-                "With every strand of red, you weave a story of warmth and desire.",
-                "In the tapestry of our love, your red-haired glow is the most vibrant thread.",
-                // Add more personalized love quotes here
-            ];
-
-            var surpriseQuotes = [
-                "In the realm of our friendship, every moment is a magical adventure.",
-                "Your laughter is the melody that plays in the symphony of our friendship.",
-                "Like a secret garden, our friendship blooms with each shared moment.",
-                "In the dance of time, our friendship is a waltz of joy and understanding.",
-                "Surrounded by the stars of our connection, our friendship is a constellation of love.",
-                "In the journey of friendship, every step is a dance of joy and understanding.",
-                "Your friendship is a treasure chest, filled with moments of joy and laughter.",
-                "With you, every day feels like a magical journey through the realms of happiness.",
-                "Our friendship is a symphony, each note playing a melody of love and care.",
-                "In the book of friendship, our story is written with ink of laughter and chapters of shared dreams.",
-                // Add more surprise quotes here
-            ];
-
-            var allQuotes = loveQuotes.concat(surpriseQuotes);
-
-            displayRandomQuote(allQuotes);
-        }
-
-        function displayRandomQuote(quotes) {
-            var randomIndex = Math.floor(Math.random() * quotes.length);
-            var loveQuoteElement = document.getElementById("loveQuote");
-            loveQuoteElement.textContent = quotes[randomIndex];
-        }
-
-        // Call the function to display the affection message
-        function toggleBackgroundAndPlay() {
-            // Toggle background image visibility
-            alternativeBackground.style.opacity = 0;
-            backgroundImage.style.opacity = 1;
-            // Play the audio after a short delay (adjust as needed)
-            setTimeout(function () {
-                playSong();
-            }, 500); // 500 milliseconds delay, adjust as needed
-            // Hide everything except the mute button and view poem button
-            hideElements();
-            // Remove the main title
-            document.querySelector('h1').style.display = 'none';
-        }
-
-        function hideElements() {
-            var elementsToHide = document.querySelectorAll('#poem-container, #invite, #loveQuote, #generateLoveQuote, #affectionMessage');
-            elementsToHide.forEach(function (element) {
-                element.style.display = 'none';
-            });
-
-            // Show the mute button and view poem button
-            muteButton.style.display = 'block';
-            viewPoemButton.style.display = 'block';
-        }
-
-        function togglePoem() {
-            var poemContainer = document.getElementById('poem-container');
-            var invite = document.getElementById('invite');
-            var loveQuote = document.getElementById('loveQuote');
-            var generateLoveQuote = document.getElementById('generateLoveQuote');
-            var affectionMessage = document.getElementById('affectionMessage');
-
-            if (poemContainer.style.display === 'none') {
-                // If elements are hidden, show them
-                var elementsToShow = [poemContainer, invite, loveQuote, generateLoveQuote, affectionMessage];
-                elementsToShow.forEach(function (element) {
-                    element.style.display = 'block';
-                });
-
-                // Hide the mute button and view poem button
-                muteButton.style.display = 'none';
-                viewPoemButton.textContent = 'Hide Poem';
-            } else {
-                // If elements are visible, hide them
-                var elementsToHide = [poemContainer, invite, loveQuote, generateLoveQuote, affectionMessage];
-                elementsToHide.forEach(function (element) {
-                    element.style.display = 'none';
-                });
-
-                // Show the mute button and view poem button
-                muteButton.style.display = 'block';
-                viewPoemButton.textContent = 'View Poem Again';
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
